// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders to match snapshot when loading 1`] = `
<div>
  <div>
    TextField mock 
    label=expected-label
     
    placeholder=expected-placeholder
  </div>
</div>
`;

exports[`Input renders to match snapshot when not loading 1`] = `
<div>
  <div>
    TextField mock 
    label=expected-label
     
    placeholder=expected-placeholder
  </div>
</div>
`;

exports[`Option renders to match snapshot when user is not selected 1`] = `
<div>
  User One
</div>
`;

exports[`Option renders to match snapshot when user is selected 1`] = `
<div>
  User One
  <svg
    aria-label="User selected"
    class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall makeStyles-userSelectedIcon-2 css-1p80rel-MuiSvgIcon-root"
    data-mui-internal-clone-element="true"
    data-testid="CheckCircleRoundedIcon"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29 5.7 12.7a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
    />
    <title>
      User selected
    </title>
  </svg>
</div>
`;
